Dead particles not included in render (F12), but visible in viewport #59272

Closed
opened 2018-12-12 22:54:25 +01:00 by Enie Weiß · 23 comments

System Information
Operating system: macOS 10.14 Mojave
Graphics card:

Blender Version
Broken: 2.80, 9c5d104224, blender2.8, 2018-12-12
Worked: 2.79

Dead Particles that are properly rendered in the viewport are not being rendered using F12. This Bug occurs with Eevee, Workbench and Cycles render engines.

  1. Create a new general file.
  2. add two planes, translate one of them upwards a little bit.
  3. add a particle system to the upper plane with
    • in "Render" set "Render As" to "Object"
    • in "Object" select the default cube as particle object.
    • in "Extra" check Dead
  4. make the bottom plane a collider and turn on "Kill Particles" on collision.
  5. scale the cube down so you can see the particles falling down when starting the animation.
  6. (optional) give the cube a more distinguishable material like dark red to be sure that there are no red spots in the rendered result.
  7. when starting the animation and rendering the scene when some particles have gathered on the lower plane these dead particles will not be rendered.
**System Information** Operating system: macOS 10.14 Mojave Graphics card: **Blender Version** Broken: 2.80, 9c5d1042244, blender2.8, 2018-12-12 Worked: 2.79 Dead Particles that are properly rendered in the viewport are not being rendered using F12. This Bug occurs with Eevee, Workbench and Cycles render engines. 1. Create a new general file. 2. add two planes, translate one of them upwards a little bit. 3. add a particle system to the upper plane with - in "Render" set "Render As" to "Object" - in "Object" select the default cube as particle object. - in "Extra" check Dead 4. make the bottom plane a collider and turn on "Kill Particles" on collision. 5. scale the cube down so you can see the particles falling down when starting the animation. 6. (optional) give the cube a more distinguishable material like dark red to be sure that there are no red spots in the rendered result. 7. when starting the animation and rendering the scene when some particles have gathered on the lower plane these dead particles will not be rendered.
Author

Added subscriber: @enie

Added subscriber: @enie
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Confirmed, checking...
#59272.blend

Confirmed, checking... [#59272.blend](https://archive.blender.org/developer/F5939530/T59272.blend)
Member

Hm, make_duplis_particle_system() seems to be making duplis for dead particles in DAG_EVAL_RENDER as well as DAG_EVAL_VIEWPORT...
Not sure yet why these are not actually rendered, needs further investigation...

Hm, `make_duplis_particle_system()` seems to be making duplis for dead particles in `DAG_EVAL_RENDER` as well as `DAG_EVAL_VIEWPORT`... Not sure yet why these are not actually rendered, needs further investigation...

Added subscriber: @486213975.ali

Added subscriber: @486213975.ali

I still have same problem. Pls tell ıf there is any progress..

I still have same problem. Pls tell ıf there is any progress..

Added subscriber: @BacMan12

Added subscriber: @BacMan12

Also encountered this today. Would be nice with a fix but particle nodes is coming, so it will probably be fixed then...hopefully.

Also encountered this today. Would be nice with a fix but particle nodes is coming, so it will probably be fixed then...hopefully.
Member

Added subscriber: @Jeroen-Bakker

Added subscriber: @Jeroen-Bakker
Member

Seems depsgraph related.

When rendering the particles that aren't born are already visible

In viewport the particles that are dead are still visible.
image.png

Seems depsgraph related. When rendering the particles that aren't born are already visible In viewport the particles that are dead are still visible. ![image.png](https://archive.blender.org/developer/F8289525/image.png)

Added subscriber: @GravityDefyingSpaceLizards

Added subscriber: @GravityDefyingSpaceLizards

The dead particles are being re-spawned on the emitter as they die. I did some trouble-shooting on this, comparing 2.79 to my current version. I'm currently using 2.81.16. .
I created the setup as described in the above original post in 2.79. All works properly.
I then saved the scene and reopened it in 2.81. It still rendered correctly.
I then created an identical particle system in 2.81 next to the imported 2.79 system. The 2.79 particles rendered ok, but the 2.81 particles did not.
If I change the 2.81 emitter to the 2.79 particle setting, it still does not render correctly.
If I change the 2.79 emitter to the 2.81 particle setting it still renders correctly.
I tried breaking the 2.79 particle emitter, and the only way I could do it was to change the number of particles emitted. Then it will not render properly, Undoing the change will correct the render.

The dead particles are being re-spawned on the emitter as they die. I did some trouble-shooting on this, comparing 2.79 to my current version. I'm currently using 2.81.16. . I created the setup as described in the above original post in 2.79. All works properly. I then saved the scene and reopened it in 2.81. It still rendered correctly. I then created an identical particle system in 2.81 next to the imported 2.79 system. The 2.79 particles rendered ok, but the 2.81 particles did not. If I change the 2.81 emitter to the 2.79 particle setting, it still does not render correctly. If I change the 2.79 emitter to the 2.81 particle setting it still renders correctly. I tried breaking the 2.79 particle emitter, and the only way I could do it was to change the number of particles emitted. Then it will not render properly, Undoing the change will correct the render.

Added subscriber: @edferr

Added subscriber: @edferr

In #59272#883120, @GravityDefyingSpaceLizards wrote:
The dead particles are being re-spawned on the emitter as they die. I did some trouble-shooting on this, comparing 2.79 to my current version. I'm currently using 2.81.16. .
I created the setup as described in the above original post in 2.79. All works properly.

I then saved the scene and reopened it in 2.81. It still rendered correctly.
I then created an identical particle system in 2.81 next to the imported 2.79 system. The 2.79 particles rendered ok, but the 2.81 particles did not.
If I change the 2.81 emitter to the 2.79 particle setting, it still does not render correctly.
If I change the 2.79 emitter to the 2.81 particle setting it still renders correctly.
I tried breaking the 2.79 particle emitter, and the only way I could do it was to change the number of particles emitted. Then it will not render properly, Undoing the change will correct the render.

great work, had the same problem. precisely the issue, i can only add a work-around, more of a kludge. for still images at least you can "convert to mesh". i used it for a metaball particle soup and it worked, haha. thanks again.

> In #59272#883120, @GravityDefyingSpaceLizards wrote: > The dead particles are being re-spawned on the emitter as they die. I did some trouble-shooting on this, comparing 2.79 to my current version. I'm currently using 2.81.16. . > I created the setup as described in the above original post in 2.79. All works properly. > I then saved the scene and reopened it in 2.81. It still rendered correctly. > I then created an identical particle system in 2.81 next to the imported 2.79 system. The 2.79 particles rendered ok, but the 2.81 particles did not. > If I change the 2.81 emitter to the 2.79 particle setting, it still does not render correctly. > If I change the 2.79 emitter to the 2.81 particle setting it still renders correctly. > I tried breaking the 2.79 particle emitter, and the only way I could do it was to change the number of particles emitted. Then it will not render properly, Undoing the change will correct the render. great work, had the same problem. precisely the issue, i can only add a work-around, more of a kludge. for still images at least you can "convert to mesh". i used it for a metaball particle soup and it worked, haha. thanks again.

Added subscriber: @ArtturiMantysaari

Added subscriber: @ArtturiMantysaari

I am also having this bug in Blender version 2.83

I am also having this bug in Blender version 2.83

This issue was referenced by b8b60e132d

This issue was referenced by b8b60e132d0382bb360855e52f2f7c522625ca98
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Jacques Lucke self-assigned this 2020-09-21 10:47:05 +02:00

Added subscriber: @BeratTurkbikmaz

Added subscriber: @BeratTurkbikmaz

Arrow Rain Test.blend
I struggling this issue. I tried in 2.83.7 and 2.90.1. But result is the same. This attached project is almost similar to which I want to create an arrow rain scene. Dead particles still not showing in the render.
Screenshot 2020-10-01 200209.jpg

[Arrow Rain Test.blend](https://archive.blender.org/developer/F8944548/Arrow_Rain_Test.blend) I struggling this issue. I tried in 2.83.7 and 2.90.1. But result is the same. This attached project is almost similar to which I want to create an arrow rain scene. Dead particles still not showing in the render. ![Screenshot 2020-10-01 200209.jpg](https://archive.blender.org/developer/F8944545/Screenshot_2020-10-01_200209.jpg)

Added subscriber: @RMENON

Added subscriber: @RMENON

I encountered this issue today in 2.90

I encountered this issue today in 2.90

Encountered what i believe to be the same issue in 3.6.4
On further examination, there was merely a discrepancy between viewport and render, somehow caused by a low cache step size. This may be something worth looking into.
In the file in question, I have an emitter several thousand units above the killer platform.

Encountered what i believe to be the same issue in 3.6.4 On further examination, there was merely a discrepancy between viewport and render, somehow caused by a low cache step size. This may be something worth looking into. In the file in question, I have an emitter several thousand units above the killer platform.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
13 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#59272
No description provided.